PROD-9699 - Fix help text link and profile type modal selector spacing issue

--- a/src/js/admin/settings-2.0/styles/scss/screens/features/_profile-types.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/features/_profile-types.scss
@@ -106,6 +106,11 @@
 		line-height: 1.5;
 		margin-top: 4px;
 
+		a {
+			color: $bb-link-color;
+			text-decoration: none;
+		}
+
 	}
 
 	/* Profile types list */
@@ -419,7 +424,13 @@
 		.components-base-control {
 			margin-bottom: 0;
 		}
+
+		&--no-border {
+			border-bottom: none;
+			padding-bottom: 0;
+		}
 	}
+	
 
 	&__section-title {
 		font-size: 13px;
@@ -655,6 +666,10 @@
 		.components-base-control__label {
 			display: block;
 			margin-bottom: 8px;
+		}
+
+		+ .components-base-control {
+			margin-top: 16px;
 		}
 	}
 
